# indi-3rdparty

indi-diygoto/: AUTHORS  ArduinoGotoDriver.cpp  ArduinoGotoDriver.h  CMakeLists.txt  indi_diygoto.xml.cmake  mount_driver.cpp  mount_driver.cpp.orig  mount_driver.h  mount_driver_complex.cpp.bak  mount_driver_complex.h.bak  sample_mount_driver.cpp  sample_mount_driver.h  simplescope.cpp  simplescope.h
indi-diygoto/.cache/clangd/index/: mount_driver.cpp.AD9F55519895055F.idx  mount_driver.h.1F6531F895035763.idx  simplescope.cpp.F31940C4EE66AE1C.idx  simplescope.h.860DADF5B6751B3C.idx
indi-diygoto/firmware/arduino_uno/: arduino_uno.ino
indi-diygoto/firmware/arduino_uno/accelstepper_example/: accelstepper_example.ino
indi-diygoto/firmware/arduino_uno/multustepper_example.ino/: multustepper_example.ino.ino
